# LangChain-Project

./: .gitignore  QA_agent.py  README.md  build_index.py  evaluation.py  langchain_retrieval_chain.py  ollama_CLI.py  pyproject.toml  reranker.py  research_assistant.py  test.py
Datasets/: export_wiki.py
Datasets/data/: Requirements_engineering.txt  Software_design.txt  Software_engineering.txt  Software_testing.txt
V2.0/: research_assistant.py  run_research_assistant.py
indexes/: faiss_index_all_mini.index  faiss_index_all_mini.meta.json
