[project]
name = "langchain-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "faiss-cpu>=1.13.0",
    "langchain>=1.1.0",
    "langchain-classic>=1.0.0",
    "numpy>=2.3.5",
    "sentence-transformers>=5.1.2",
]
